--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             </div>
           </div>
           <div class="col-md-5">
-            <img src="images/ripal3.png" class="header-img" alt="" />
+            <img src="images/coding2.png" class="header-img" alt="" />
           </div>
         </div>
       </div>
